--- a/package.json
+++ b/package.json
@@ -12,29 +12,28 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@capacitor/android": "^3.3.3",
-    "@capacitor/cli": "^3.3.3",
-    "@capacitor/core": "^3.3.3",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-static": "^1.0.0-next.21",
+    "@capacitor/android": "^3.4.0",
+    "@capacitor/cli": "^3.4.0",
+    "@capacitor/core": "^3.4.0",
+    "@sveltejs/adapter-static": "^1.0.0-next.26",
     "@sveltejs/kit": "next",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "autoprefixer": "^10.3.7",
-    "cssnano": "^5.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "postcss": "^8.3.9",
-    "postcss-load-config": "^3.1.0",
-    "prettier": "^2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.9.8",
-    "tailwindcss": "^2.2.16",
+    "eslint-plugin-svelte3": "^3.4.0",
+    "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.6.0",
+    "svelte": "^3.46.2",
+    "svelte-check": "^2.3.0",
+    "svelte-preprocess": "^4.10.2",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.5.4",
+    "vite-plugin-windicss": "^1.6.3",
+    "windicss": "^3.4.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@capacitor/storage": "^1.2.4"
+  }
 }
